# openblas-libs

./: .gitignore  .travis.yml  build-openblas.sh  build-wheel.sh  build-wheels.sh  ci-before-build.sh  ci-repair-wheel.sh  ci-test.sh  pyproject.toml  x64-cmake.sh
.github/workflows/: posix.yml  wheel.yml  windows-arm.yml  windows.yml
local/scipy_openblas64/: __init__.py
patches/: 0001-Fix-missing-support-for-HFLOAT16-in-Windows-symbol-r.patch  0002-Change-all-aligned-moves-to-unaligned.patch  mac-x86-unaligned.patch
tools/: build_openblas.sh  build_openblas_for_win.ps1  build_openblas_for_win.sh  build_prepare.sh  build_steps.sh  build_steps_win_arm64.bat  build_wheel.sh  build_wheel_prepare_for_win.sh  osx_utils.sh  repair_for_win.sh  repair_wheel_for_win_arm64.bat  test_for_win.sh  test_wheel_for_win_arm64.bat
